# cxr-detect

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: baseline.yaml  disease_classes.json
docs/: api_spec.md  data_pipeline.md  ml_pipeline.md  requirements.md  system_design.md
scripts/: train.py
src/cxr_detect/data/: dataloader.py  dataset.py  encode_labels.py  label_encoder.py  split.py  transforms.py
src/cxr_detect/metrics/: classification_metrics.py
src/cxr_detect/models/: densenet.py  efficientnet.py  model_factory.py  resnet.py
src/cxr_detect/training/: evaluate.py  train_one_epoch.py  trainer.py
src/cxr_detect/utils/: config.py  env.py  loss.py  process_data.py
tests/data/: test_dataloaders.py  test_dataset.py  test_label_encoder.py  test_split.py  test_transforms.py
tests/models/: test_models.py
tests/training/: test_train_eval.py  test_trainer.py
