[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cxr-detect"
version = "0.1.0"
description = "Chest X-ray Multi-Label Disease Detection System"
authors = [
    { name = "Abrar" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "pandas>=2.3.1",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.1",
    "matplotlib>=3.10.3",
    "tqdm>=4.67.1",
    "pyyaml>=6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "pre-commit",
]

